# pyEulerCurves

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  format.yml  lint.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: requirements.txt
docs/source/: API.rst  citation.rst  conf.py  getting_started.rst  index.rst
docs/source/examples/: RGBcubical_utils.py  data_HB.ipynb  distance_utils.py  ecp_2d.cpp  example_cubical.ipynb  example_plotting_2d_ECP.ipynb  example_pointclouds_VR.ipynb  example_pointclouds_alpha.ipynb  example_velocity.ipynb  index.rst  test_distances.ipynb
docs/source/examples/data/: 00000.png_t_u8_50x200x100.from_stack.raw.euler  Planck_t_u8_500x1000.raw.euler
docs/source/examples/data/testECP/: 2d_0  2d_1
examples/: example_Vietoris-Rips.ipynb  example_cubical.ipynb  parallel_ECCs_distance_computations.ipynb
pyEulerCurves/: __init__.py  _template.py  _version.py  bifiltration_utils.py  cubical.py  distance_utils.py  ecc_VR.py  ecc_cubical.py  ecc_utils.py  velocity.py  vietorisRips.py
src/: compute_local_EC_VR.cpp  compute_local_EC_cubical.cpp
tests/: test.py
