[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyEulerCurves"
description = "A python package to compute Euler Characteristic Curves"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}  # adjust if needed

authors = [
    { name = "Davide Gurnari", email = "davide.gurnari@gmail.com" }
]

dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pybind11>=2.10.0",
    "gudhi",
    "numba",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dioscuri-tda/pyEulerCurves"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["pyEulerCurves*"]

[tool.setuptools.package-data]
pyEulerCurves = [
    "*.py",
    "src/*.h",
    "src/*.cpp",
]

[tool.setuptools.dynamic]
version = { attr = "pyEulerCurves._version.__version__" }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
